feat: implement carousel with bootstrap, some minor fixes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/gleb-bayeshko/restaurant-landing-page#readme",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
