--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "style": "sass --watch src/sass/main.scss src/sass/main.css",
-    "bundle": "./node_modules/webpack/bin/webpack.js --watch"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,29 @@
   },
   "homepage": "https://github.com/gleb-bayeshko/restaurant-landing-page#readme",
   "dependencies": {
+    "@babel/core": "^7.11.6",
     "bootstrap": "^4.5.2",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-upgrade": "^1.0.1",
+    "css-loader": "^4.3.0",
+    "extract-loader": "^5.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.1.0",
+    "html-loader": "^1.3.1",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^0.11.2",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "style-loader": "^1.2.1",
+    "svg-url-loader": "^6.0.0",
+    "terser-webpack-plugin": "^4.2.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
