--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "style": "sass --watch src/sass/main.scss src/sass/main.css",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -20,16 +20,17 @@
   },
   "homepage": "https://github.com/gleb-bayeshko/restaurant-landing-page#readme",
   "dependencies": {
-    "@babel/core": "^7.11.6",
     "bootstrap": "^4.5.2",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-upgrade": "^1.0.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "extract-loader": "^5.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -39,6 +40,7 @@
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "svg-url-loader": "^6.0.0",
     "terser-webpack-plugin": "^4.2.2",
