--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "owl.carousel": "^2.3.4",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "svg-url-loader": "^6.0.0",
